# Stingray

./: .gitignore  Cargo.toml  docker-compose.yaml  package-lock.json  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: build.yaml
backend/: Cargo.toml
backend/common/: Cargo.toml
backend/common/src/: models.rs
backend/common/src/repositories/: generic_repository.rs  mod.rs  session_repository.rs  user_repository.rs  userdata_repository.rs
backend/example/: Cargo.toml  Dockerfile  README.md
backend/example/src/: http_handler.rs
backend/signup/: Cargo.toml  README.md
backend/signup/src/: http_handler.rs  main.rs
backend/src/: auth.rs  main.rs  response.rs  websocket.rs
backend/src/api/: edit_a.rs  fish.rs  login.rs  mod.rs  register.rs  user.rs
backend/src/domain/: entities.rs  mod.rs  transaction_manager.rs
backend/src/domain/repositories/: mod.rs  session_repository.rs  user_data_repository.rs  user_repository.rs
backend/src/models/: user_data.rs
backend/src/persistence/: db.rs  mod.rs  session_repository.rs  user_data_repository.rs  user_repository.rs
backend/src/persistence/migrations/: 000_create_sessions.sql  001_create_users.sql  002_create_user_data.sql
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  types.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: FinishFishBtn.tsx  JoinMatchBtn.tsx  NowFish.tsx
frontend/app/css/: battle.css
frontend/app/jotai/: atoms.ts
frontend/app/routes/: BattleLobby.tsx  Character.tsx  battle.tsx  custom.tsx  fishing.tsx  (+6 more)
