[package]
name = "signup"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
common = { path = "../common" }
aws-sdk-dynamodb = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-config = "1.5.17"
bcrypt = "0.17.0"
chrono = "0.4.39"
uuid = { version = "1.15.0", features = ["v4"] }
